update readme.md file